--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "solid-js": "^1.7.4"
   },
   "devDependencies": {
+    "@total-typescript/ts-reset": "^0.4.2",
     "@types/node": "^18.16.3",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
